# gpt-assisstant

./: .gitignore  poetry.toml  pyproject.toml
gpt_assisstant/: gpt_assisstant.py
